@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-05T00:51:28Z",
-  "count_outdated" : 1013,
-  "uniques_outdated" : 619,
-  "count" : 1026,
-  "uniques" : 632,
+  "timestamp" : "2025-09-06T00:50:10Z",
+  "count_outdated" : 1014,
+  "uniques_outdated" : 620,
+  "count" : 1027,
+  "uniques" : 633,
   "clones" : [
-    {
-      "timestamp": "2025-08-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-23T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-09-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
