@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-08-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-23T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-09-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
