@@ -1,3 +1,12 @@
+2025-09-06T00:50:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17507678895 # 758
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-06
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 619 1013 / 632 1026
+* notice: next accum: outdated-unq outdated-all / unq all: 620 1014 / 633 1027
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-08-22] / [2025-09-05]
+
 2025-09-05T00:51:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17480477242 # 757
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-05
